css alignment fixes

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -92,7 +92,7 @@ div.icons{
 
 .face {
   width: 110px;
-  margin: 2px 15px 4px 2px;
+  margin: 5px 15px 5px 5px;
   float:left;
 
 }
@@ -163,7 +163,7 @@ code {
     }
 
     .col-md-4 {
-        min-height: 160px;
+        min-height: 150px;
         max-width:360px;
         margin-left:15px;
     }
